# querulus

./: .gitignore  CHANGELOG.md  Makefile  __init__.py  env_template  model_learn.py  pyproject.toml
configs/: config.py  config_cf_3.json  config_rg_3.json  dataset_filters.json  dataset_sources.json  features_catalog.md  features_v1.json
integration/: CHANGELOG.md  __init__.py  __main__.py  config.py  env_template  integration_tests.py  main.py  test_instruction.md  unit_tests.py
integration/tests/: __init__.py  integration_tests.py  test_instruction.md  unit_tests.py
monitoring/: config.py  env_template  extractors.py  main.py  monitoring.py  monitoring_config.json
monitoring/reports/: report.py
notebook/: _fix_nb.py  collect.ipynb  collect.py  config.py  env_template
notebook/configs/: config.py  config_cf_3.json  config_rg_3.json
notebook/dataset/: __init__.py  constants.py  io.py  paths.py  pipeline.py
notebook/dataset/steps/: __init__.py  claims.py  enrich.py  payments.py  pretensions.py  targets.py  victim.py
notebooks/: collect.ipynb
src/querulus/: AutoMVP.py  __init__.py  env.py  synthetic_dataset.py
src/querulus/dataset/: __init__.py  artifacts.py  config.py  constants.py  filters.py  io.py  paths.py  pipeline.py  pretension_utils.py  utils.py
src/querulus/features/: __init__.py  cleanup.py  config.py  derived.py  incident_pretensions.py  pipeline.py
src/querulus/fin_effect/: __init__.py  calculator.py  compare_report.py  config.py  export.py  plots.py  resolve.py  segment_eval.py  summary.py
src/querulus/integration/: __main__.py  (+1 more)
(+42 files in other folders)
