[project]
name = "querulus"
version = "0.1.0"
description = "Модель сутяжничества: датасет, обучение, сервис, мониторинг"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["querulus*", "integration*", "monitoring*"]
